modificata struttura pagina

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
             <li>Latte</li>
         </ul>
 
-        <p><strong>Lorem ipsum</strong>, dolor sit amet consectetur adipisicing elit. <em>Nesciunt eaque</em> saepe omnis autem dolor quasi. Iure, repellat doloribus laudantium optio necessitatibus amet, consequuntur, sed atque sint asperiores facere suscipit nemo?</p>
+        <hr>
+
+        <p>
+            <strong>Lorem ipsum</strong>, dolor sit amet consectetur adipisicing elit.
+            <br>
+            <em>Nesciunt eaque</em> saepe omnis autem dolor quasi. Iure, repellat doloribus laudantium optio necessitatibus amet, consequuntur, sed atque sint asperiores facere suscipit nemo?
+        </p>
+
+        <hr>
+
+        <div>
+            <h2>Hello world!</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus asperiores unde accusantium magnam cum labore numquam. Assumenda minus ex, aliquid possimus veritatis nemo hic ipsum magnam repellendus harum vitae enim.</p>
+        
+        </div>
+
     </body>
 </html>
