fine live coding concetti base

--- a/index.html
+++ b/index.html
@@ -35,5 +35,58 @@
         
         </div>
 
+        <hr>
+
+        <p>In HTML i tag sono sempre racchiusi tra i caratteri &lt; e &gt; </e></p>
+
+        <hr>
+
+        <h3>Quella che segue è una tabella:</h3>
+
+        <table>
+
+            <thead>
+                <tr>
+                    <th>
+                        Nome studente
+                    </th>
+                    <th>
+                        Et&agrave; dello studente
+                    </th>                   
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>
+                        Mario Rossi
+                    </td>
+                    <td>
+                        20
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Giulia Bianchi
+                    </td>
+                    <td>
+                        40
+                    </td>
+                </tr>
+            </tbody>
+
+            <tfoot>
+                <tr>
+                    <td>
+                        Et&agrave; media
+                    </td>
+                    <td>
+                        30
+                    </td>
+                </tr>
+            </tfoot>
+
+        </table>
+
     </body>
 </html>
