fixato errore riga 40

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <hr>
 
-        <p>In HTML i tag sono sempre racchiusi tra i caratteri &lt; e &gt; </e></p>
+        <p>In HTML i tag sono sempre racchiusi tra i caratteri &lt; e &gt;</p>
 
         <hr>
 
